# json-language-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
lsp-server/src/: msg.rs
src/: colors.rs  completion.rs  diagnostics.rs  document.rs  folding.rs  formatting.rs  hover.rs  links.rs  main.rs  selection.rs  server.rs  symbols.rs  tree.rs
src/schema/: resolver.rs  validation.rs
