[package]
name = "json-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt", "macros", "io-std", "sync", "time"] }

# Parsing
tree-sitter = "0.26"
tree-sitter-json = "0.24"
line-index = "0.1"

# Schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["json", "native-tls"] }
regex = "1"
globset = "0.4"
percent-encoding = "2"
lru = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
